# clipr

./: Cargo.toml  LICENSE  README.md  README.org  config.toml
clipr-cli/: Cargo.toml
clipr-cli/src/: main.rs
clipr-common/: Cargo.toml
clipr-common/src/: lib.rs
clipr-daemon/: Cargo.toml
clipr-daemon/src/: http.rs  lib.rs  main.rs  usage.txt
clipr-emacs/: Cargo.toml
clipr-emacs/src/: clipr-mode.el  lib.rs
src/: common.rs  main.rs
