[workspace]
members = ["clipr-common", "clipr-daemon", "clipr-cli", "clipr-emacs"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.58"
clap = { version = "4.6.1", features = ["derive"] }
chrono = "0.4.22"
shellwords = "1.1.0"
toml = "1.1.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.6.4", features = ["all"] }
