[package]
name = "clipr-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
async-std = "1.12.0"
chrono = "0.4.22"
clap = { version = "3.2.14", features = ["derive"] }
serde = { version = "1.0.139", features = ["derive"] }
serde-lexpr = "0.1.2"
serde_derive = "1.0.140"
shellwords = "1.1.0"
toml = "0.5.9"
