[package]
name = "clipr-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
async-std = { workspace = true }
serde-lexpr = { workspace = true }
shellwords = { workspace = true }
clipr-common = { path = "../clipr-common" }
tide = "0.16.0"
cocoa = { version = "0.24.0" }
objc = "0.2.3"
rustyline = "10.0.0"
env_logger = "0.9.0"
