[package]
name = "clipr-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
shellwords = { workspace = true }
clipr-common = { path = "../clipr-common" }
cocoa = { version = "0.24.0" }
objc = "0.2.3"
rustyline = "10.0.0"
env_logger = "0.9.0"
httparse = "1.8.0"
socket2 = { workspace = true }
