[package]
name = "clipr-emacs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
async-std = { workspace = true }
shellwords = { workspace = true }
surf = { workspace = true }
clipr-common = { path = "../clipr-common" }
emacs = "0.18.0"

[lib]
name = "clipr"
crate-type = ["cdylib"]