[package]
name = "clipr-emacs"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
shellwords = { workspace = true }
clipr-common = { path = "../clipr-common" }
clipr-daemon = { path = "../clipr-daemon" }
emacs = "0.21.0"

[lib]
name = "clipr"
crate-type = ["cdylib"]
